# hypothesis-requests

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: poetry.yml  pytest.yml
hypothesis_requests/: __init__.py
hypothesis_requests/strategies/: __init__.py  exceptions.py  request.py  response.py  session.py
hypothesis_requests_test/: __init__.py
hypothesis_requests_test/strategies_test/: __init__.py  exception_test.py  request_test.py  response_test.py  session_test.py
