[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.isort]
profile = "black"

[tool.poetry]
authors = ["alunduil <alunduil@gmail.com>"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Framework :: Hypothesis",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: The Unlicense (Unlicense)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development",
  "Topic :: System :: Installation/Setup",
  "Typing :: Typed"
]
description = "You can use hypothesis-requests to create a new GitHub repository."
keywords = ["python", "template", "vscode", "devcontainers"]
license = "MPL-2.0"
name = "hypothesis_requests"
readme = "README.md"
repository = "https://github.com/alunduil/hypothesis-requests"
version = "0.3.0"

[tool.poetry.dependencies]
hypothesis = "^6.61.0"
python = "^3.7.2"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
coveralls = "^3.3.1"
pre-commit = "^2.20.0"
pylint = "^2.15.5"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-xdist = {extras = ["psutil"], version = "^3.1.0"}

[tool.pytest.ini_options]
addopts = "--doctest-modules --cov=hypothesis_requests --cov-report=term-missing -n logical"
enable_assertion_pass_hook = true
testpaths = ["hypothesis_requests_test"]

[tool.vulture]
paths = ["hypothesis_requests", "hypothesis_requests_test"]
